<resources>
    <string name="app_name">BooTani</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="type_here">Type here...</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string-array name="data_name">
        <item>Padi</item>
        <item>Jagung</item>
        <item>Bawang Merah</item>
        <item>Kacang Kedelai</item>
        <item>Singkong</item>
        <item>Kunyit</item>
        <item>Tomat</item>
        <item>Cabai Merah</item>
        <item>Wortel</item>
        <item>Terong</item>
    </string-array>
    <string-array name="data_price">
        <item>Rp. 10,000</item>
        <item>Rp. 15,000</item>
        <item>Rp. 12,500</item>
        <item>Rp. 8,000</item>
        <item>Rp. 20,000</item>
        <item>Rp. 7,500</item>
        <item>Rp. 9,000</item>
        <item>Rp. 18,000</item>
        <item>Rp. 11,000</item>
        <item>Rp. 13,000</item>
    </string-array>
    <string-array name="price_increase_percentage">
        <item>1%</item>
        <item>1.5%</item>
        <item>1.2%</item>
        <item>0.8%</item>
        <item>2%</item>
        <item>0.7%</item>
        <item>0.9%</item>
        <item>1.8%</item>
        <item>1.1%</item>
        <item>1.3%</item>
    </string-array>
</resources>