<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="238dp"
        android:layout_marginTop="-115dp"
        android:layout_marginStart="-70dp"
        android:background="@drawable/circle_shape"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="16dp"
        android:text="@string/back"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/baseline_arrow_back_ios_new_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="50dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:fontFamily="@font/poppins_extrabold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_10"
        tools:ignore="TextFields">

        <TextView
            android:id="@+id/email_or_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="100dp"
            android:text="@string/email_or_phone_number"
            android:textColor="@color/white40"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_medium" />

        <EditText
            android:id="@+id/email_or_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="45dp"
            android:layout_below="@id/email_or_phone_number"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/type_here"
            android:inputType="textEmailAddress|textPersonName"
            android:padding="10dp"
            android:textColorHint="@color/white40"
            android:textSize="11sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="0dp"
            android:layout_below="@id/password_text"
            android:hint="@string/type_here"
            android:background="@drawable/edit_text_background"
            android:padding="10dp"
            android:textSize="11sp"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins_medium"
            android:textColorHint="@color/white40" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_below="@+id/email_or_phone"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textColor="@color/white40"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_medium" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="315dp"
            android:gravity="center"
            android:text="log"
            android:fontFamily="@font/poppins_bold"
            app:backgroundTint="@color/green_light"
            android:textSize="14sp"
            android:background="@drawable/button_background"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>



</RelativeLayout>
